[gd_scene load_steps=9 format=2]

[ext_resource path="res://Enemies/Enemy1/Enemy1.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Skeleton enemy/Skeleton enemy.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Attack"
length = 1.06
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.5, 0.7, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "hit"
}, {
"args": [  ],
"method": "end_of_hit"
}, {
"args": [  ],
"method": "hit"
}, {
"args": [  ],
"method": "end_of_hit"
}, {
"args": [  ],
"method": "start_walk"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "Death"
length = 1.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 25 ]
}

[sub_resource type="Animation" id=3]
length = 1.05
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 19.1832, 18.8482 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16.9783, 5.93395 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10.994, 25.1474 )

[node name="SkeletonEnemy" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 1 )

[node name="raycast3" type="RayCast2D" parent="."]
position = Vector2( 0, -22 )
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 3

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
hframes = 13
vframes = 5
frame = 25

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 1 )
anims/Death = SubResource( 2 )
anims/walk = SubResource( 3 )

[node name="raycast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 3

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 32.443, -0.31498 )
shape = SubResource( 4 )

[node name="AttackDetector" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector"]
position = Vector2( 31.4981, -0.31498 )
shape = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="raycast2" type="RayCast2D" parent="."]
position = Vector2( 0, 20 )
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 3

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_entered" from="AttackDetector" to="." method="_on_AttackDetector_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
